[gd_scene load_steps=21 format=3 uid="uid://uh0rb6e1afvs"]

[ext_resource type="Texture2D" uid="uid://ioxyqjglainc" path="res://assets/images/characters/Enemies/Bosses/vehicle 3/frames/vehicle-3.png" id="1_g0f76"]
[ext_resource type="Script" path="res://Scenes/Enemies/Boss-Ship/boss_ship.gd" id="1_v62bw"]
[ext_resource type="Texture2D" uid="uid://c1mkkqbh3hr86" path="res://assets/images/fx/Explosion.png" id="2_thhtb"]
[ext_resource type="Texture2D" uid="uid://bhqkihc3g7dtj" path="res://assets/images/characters/Enemies/Bosses/vehicle 3/frames/vehicle-4.png" id="2_ty4vu"]
[ext_resource type="Texture2D" uid="uid://p00sm2htdjb1" path="res://assets/images/characters/Enemies/Bosses/vehicle 3/frames/vehicle-5.png" id="3_xclje"]
[ext_resource type="AudioStream" uid="uid://csewilwu25psd" path="res://assets/audio/sfx/logo_in.wav" id="5_f2qqp"]
[ext_resource type="AudioStream" uid="uid://b7o7slev6nep6" path="res://assets/audio/sfx/explosion.wav" id="6_4k8hq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_82w10"]
atlas = ExtResource("2_thhtb")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_12ayd"]
atlas = ExtResource("2_thhtb")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cilk0"]
atlas = ExtResource("2_thhtb")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_27mir"]
atlas = ExtResource("2_thhtb")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i57of"]
atlas = ExtResource("2_thhtb")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpd8a"]
atlas = ExtResource("2_thhtb")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_23dx5"]
atlas = ExtResource("2_thhtb")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwshy"]
atlas = ExtResource("2_thhtb")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1b3x"]
atlas = ExtResource("2_thhtb")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8cru"]
atlas = ExtResource("2_thhtb")
region = Rect2(864, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3o07"]
atlas = ExtResource("2_thhtb")
region = Rect2(960, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad5jc"]
atlas = ExtResource("2_thhtb")
region = Rect2(1056, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_r1ngw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_82w10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12ayd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cilk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27mir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i57of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpd8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23dx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwshy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1b3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8cru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3o07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad5jc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82w10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12ayd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cilk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27mir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i57of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpd8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23dx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwshy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1b3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8cru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3o07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad5jc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82w10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12ayd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cilk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27mir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i57of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpd8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23dx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwshy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1b3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8cru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3o07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad5jc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82w10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12ayd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cilk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27mir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i57of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpd8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23dx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwshy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1b3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8cru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3o07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad5jc")
}],
"loop": false,
"name": &"death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_g0f76")
}, {
"duration": 1.0,
"texture": ExtResource("2_ty4vu")
}, {
"duration": 1.0,
"texture": ExtResource("3_xclje")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[node name="BossShip" type="CharacterBody2D" groups=["Boss", "Enemy"]]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_v62bw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r1ngw")
animation = &"death"
autoplay = "default"
frame = 47
frame_progress = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(15, -46, 90, -54, 118, -54, 164, -6, 164, 0, 134, 51, 103, 49, 89, 70, 48, 70, 17, 58, 11, 63, -4, 63, -13, 62, -32, 51, -30, 45, -44, 41, -50, 35, -58, 17, -72, 19, -99, 16, -103, 10, -131, 10, -131, 1, -105, 0, -111, -9, -135, -9, -153, -14, -153, -43, -147, -48, -116, -56, -108, -56, -104, -63, -57, -74, -47, -66, -31, -70, -23, -65, -7, -65, 5, -47)

[node name="Spawner" type="Marker2D" parent="."]
position = Vector2(67, 70)

[node name="SpawnSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_f2qqp")
volume_db = -9.0

[node name="ExplosionSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_4k8hq")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(164, -4)
rotation = -6.28319
scale = Vector2(1, 40)
target_position = Vector2(5, 0)

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 2

[node name="HurtboxShape" type="CollisionPolygon2D" parent="Hurtbox"]
polygon = PackedVector2Array(15, -46, 90, -54, 118, -54, 164, -6, 164, 0, 134, 51, 103, 49, 89, 70, 48, 70, 17, 58, 11, 63, -4, 63, -13, 62, -32, 51, -30, 45, -44, 41, -50, 35, -58, 17, -72, 19, -99, 16, -103, 10, -131, 10, -131, 1, -105, 0, -111, -9, -135, -9, -153, -14, -153, -43, -147, -48, -116, -56, -108, -56, -104, -63, -57, -74, -47, -66, -31, -70, -23, -65, -7, -65, 5, -47)

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
